# hacs-conversation_chain

./: .flake8  .gitignore  CHANGELOG.md  README.md  hacs.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pull_requests.yml  release.yml
custom_components/conversation_chain/: __init__.py  config_flow.py  const.py  manifest.json  strings.json
custom_components/conversation_chain/agent/: __init__.py  conversation_chain_agent.py  load_manifest.py
custom_components/conversation_chain/flow/: __init__.py  config_flow.py  config_schema.py  options_flow.py  options_schema.py
custom_components/conversation_chain/translations/: en.json
test/: __init__.py  test_load_manifest.py
test/conversation_chain/: __init__.py
test/conversation_chain/agent/: __init__.py
test/conversation_chain/flow/: __init__.py
