[project]
version = "0.1.1"
name = "conversation_chain"
description = "This Custom Component provides a new integration to create chains of conversation agent."
readme = "README.md"
requires-python = ">= 3.12"
authors = [
    { name = "t0bst4r" }
]
maintainers = [
    { name = "t0bst4r" }
]
license = { file = "LICENSE.md" }

[project.urls]
Homepage = "https://github.com/t0bst4r/hacs-conversation_chain"
Issues = "https://github.com/t0bst4r/hacs-conversation_chain/issues"
Releases = "https://github.com/t0bst4r/hacs-conversation_chain/releases"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:homeassistant.components.*:"
]

[tool.commitizen]
version = "0.1.1"
version_files = [
    "pyproject.toml:version",
    "custom_components/conversation_chain/manifest.json:version"
]
changelog_file = "CHANGELOG.md"
annotated_tag = true
major_version_zero = true
version_scheme = "semver"
